--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h1 id="nameText">Omer Katan</h1>
         </div>
 
+        <!--This is were the links are inside the header-->
         <div id="linkSections">
 
             <div id="link-about">
