added portfolio basic content

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <body>
-        <!--All the stuff that is going to be in page-->
+        <!--This is the page Content (Everthing between header and footer)-->
         <div class="pageContent">
 
             <!--This is the box in the middle-->
