made changes to placeholder inside text boxes

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
         <div id="nameSection">
             <h1 id="nameText">Omer Katan</h1>
         </div>
-        
+
+        <!--This is the box that holds the links to the other pages-->
             <div id="linkSections">
         
             <div id="link-about">
@@ -46,11 +47,11 @@
                     <!--Stores the user input into a certain file-->
                     <form action="/action_page.php">
                         Name<br>
-                        <input class="inputStyle" type="text" name="Name">
+                        <input class="inputStyle" type="text" name="Name" placeholder=" Your Name" onfocus="this.placeholder = ''" onblur="this.placeholder=' Your Name'">
                         <br><br>
 
                         Email<br>
-                        <input class="inputStyle" type="text" name="Email">
+                        <input class="inputStyle" type="text" name="Email" placeholder=" youremail@mail.com" onfocus="this.placeholder = ''" onblur="this.placeholder = ' youremail@mail.com'">
                         <br><br>
 
                         Message<br>
