--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
         <!--This is were the links are inside the header-->
         <div id="linkSections">
 
+            <!--This is the link for the about in the header bar-->
             <div id="link-about">
                 <a href="index.html">About</a>
             </div>
 
+            <!--This is the link for the portfolio-->
             <div id="link-portfolio">
                 <a href="portfolio.html">Portfolio</a>
             </div>
 
+            <!--this is the link for the contact on the header bar-->
             <div id="link-contact">
                 <a href="contact.html">Contact</a>
             </div>
@@ -48,7 +51,10 @@
                     <img id="profileImg" src="Assets/images/IMG_0204.jpg" alt="picture of me">
 
                     <!--Text about you goes here-->
-                    <p></p>
+                    <article>
+                        <p></p>
+                    </article>
+
 
                 </div>
             </div>
