--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                     <!--Text about you goes here-->
                     <article>
-                        <p></p>
+                        <p>future text will go here</p>
                     </article>
 
 
