--- a/portfolio.html
+++ b/portfolio.html
@@ -44,58 +44,73 @@
                     <h1 class="titleColor titleFont">Portfolio</h1>
                 </div>
                 
-                <div id="mainBoxContent">
+                <div id="mainBoxContentPortfolio">
                     <table>
+
+                        <!-- Row 1 -->
                         <tr>
                             <th>
 
+                                <!-- Placeholder link -->
+                                <a href="">
                                 <div id="tableImg1">
                                     <div class="tableTextBox">
                                         <p class="tableText">Hangman</p>
                                     </div>
                                 </div>
+                                </a>
 
                             </th>
                             <th>
 
+                                <a href="">
                                 <div id="tableImg2">
                                     <div class="tableTextBox">
-                                        <p class="tableText">RPG Game</p>
+                                        <p class="tableText">RPG game</p>
                                     </div>
                                 </div>
+                                </a>
 
                             </th>
                         </tr>
 
+                        <!-- Row 2 -->
                         <tr>
                             <th>
 
+                                <a href="">
                                 <div id="tableImg3">
                                     <div class="tableTextBox">
                                         <p class="tableText">Trivia Game</p>
                                     </div>
                                 </div>
+                                </a>
 
                             </th>
                             <th>
 
+                                <a href="">
                                 <div id="tableImg4">
                                     <div class="tableTextBox">
                                         <p class="tableText">Rutgers Info Widget</p>
                                     </div>
                                 </div>
+                                </a>
 
                             </th>
                         </tr>
 
+                        <!-- Row 3 -->
                         <tr>
                             <th>
 
+                                <a href="">
                                 <div id="tableImg5">
                                     <div class="tableTextBox">
                                         <p class="tableText">Rock Paper Scissors</p>
                                     </div>
                                 </div>
+                                </a>
 
                             </th>
                         </tr>
