Edited image from final project

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <!--This is the content inside the main box-->
                 <div id="mainBoxContent">
-                    <img id="profileImg" src="Assets/images/IMG_0204.jpg" alt="picture of me">
+                    <img id="profileImg" src="../My-Portfolio/Assets/images/IMG_0204.jpg" alt="picture of me">
 
                     <!--Text about you goes here-->
                     <article>
